Fix store/load url.

Fix bug Bug 339195 - regression: bogofilter fails to manipulate message headers

BUG: 339195
BUG: 345822
FIXED-IN: 4.14.7